a bug on mobile device - need to figure out why scrolling event animation from right to left on mobiile prevent scroling down in projects section

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -15,4 +15,6 @@ html {
 body {
     box-sizing: border-box;
     background-color: rgba($color-black,.80);
+    overflow-y: auto;
+    overflow-x: hidden;
 }
