--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -94,6 +94,7 @@ body {
     }
     .heading-tertiary{
         font-size: 2rem;
+        padding: 1rem;
         text-align: center;
         text-transform: uppercase;
     }
