--- a/sass/components/_contact-form.scss
+++ b/sass/components/_contact-form.scss
@@ -59,6 +59,7 @@
     
         &__content{
             width: 30rem;
+            margin-top: 6rem;
         }
     }
      
