--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -37,7 +37,7 @@
     background-color:($color-black,.8);
     position: relative;
     height: auto;
-    padding-bottom: 10rem;
+    padding-bottom: 5rem;
     transition: all 3s ease-in;
 }
 
@@ -46,6 +46,7 @@
     transition: all 3s ease-in;
 
 }
+
 @media (max-width: 700px) {
     .section-about{
         height: auto;
